// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsqQuestionAdditionalInfoComponent should show generated option message when generateOptionFor is enabled 1`] = `
<tm-msq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (multiple answers) question options:
  <div>
     The options for this question is automatically generated from the list of all students in this course.
  </div>
</tm-msq-question-additional-info>
`;

exports[`MsqQuestionAdditionalInfoComponent should show msq options 1`] = `
<tm-msq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (multiple answers) question options:
  <ul>
    <li>
      1
    </li>
    <li>
      2
    </li>
    <li>
      3
    </li>
  </ul>
</tm-msq-question-additional-info>
`;

exports[`MsqQuestionAdditionalInfoComponent should show other when "other" option is enabled 1`] = `
<tm-msq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (multiple answers) question options:
  <ul>
    <li>
      1
    </li>
    <li>
      2
    </li>
    <li>
      3
    </li>
    <li>
      Other
    </li>
  </ul>
</tm-msq-question-additional-info>
`;

exports[`MsqQuestionAdditionalInfoComponent should snap with default view 1`] = `
<tm-msq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (multiple answers) question options:
  <ul>
  </ul>
</tm-msq-question-additional-info>
`;
